--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <header class="app-header">
       <h1><span class="cohort-name">FAC#24</span> Projects Gallery</h1>
     </header>
+    <img class="fac-logo" src="assets/fac-logo.png" />
     <main id="app"></main>
     <script src="js/data.js"></script>
     <script src="js/logic.js"></script>
