used a tag to add a link to the fac website once user clicks on logo

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <header class="app-header">
       <h1><span class="cohort-name">FAC#24</span> Projects Gallery</h1>
     </header>
+    <a href="https://www.foundersandcoders.com" target="_blank">
+      <img class="fac-logo" src="assets/fac-logo-circ.png" />
+    </a>
     <img class="fac-logo" src="assets/fac-logo.png" />
     <main id="app"></main>
     <script src="js/data.js"></script>
