--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1><span class="cohort-name">FAC#24</span> Projects Gallery</h1>
     </header>
     <a href="https://www.foundersandcoders.com" target="_blank">
-      <img class="fac-logo" src="assets/fac-logo-circ.png" />
+      <img class="fac-logo" src="assets/fac-logo.png" />
     </a>
     <img class="fac-logo" src="assets/fac-logo.png" />
     <main id="app"></main>
