added class attribute

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <header class="app-header">
       <h1><span class="cohort-name">FAC#24</span> Projects Gallery</h1>
     </header>
-    <a href="https://www.foundersandcoders.com" target="_blank">
+    <a
+      class="fac-link"
+      href="https://www.foundersandcoders.com"
+      target="_blank"
+    >
       <img class="fac-logo" src="assets/fac-logo.png" />
     </a>
     <img class="fac-logo" src="assets/fac-logo.png" />
