removed class that is not needed anymore

--- a/index.html
+++ b/index.html
@@ -22,15 +22,10 @@
   <body>
     <header class="app-header">
       <h1><span class="cohort-name">FAC#24</span> Projects Gallery</h1>
+      <a href="https://www.foundersandcoders.com/" target="_blank">
+        <img class="fac-logo" src="assets/fac-logo.png" />
+      </a>
     </header>
-    <a
-      class="fac-link"
-      href="https://www.foundersandcoders.com"
-      target="_blank"
-    >
-      <img class="fac-logo" src="assets/fac-logo.png" />
-    </a>
-    <img class="fac-logo" src="assets/fac-logo.png" />
     <main id="app"></main>
     <script src="js/data.js"></script>
     <script src="js/logic.js"></script>
