created span for broccoli iconify

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <a href="https://www.foundersandcoders.com/" target="_blank">
       <img class="fac-logo" src="assets/fac-logo.png" />
     </a>
+    <span class="iconify" data-icon="noto:broccoli"></span>
     <main id="app"></main>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="js/data.js"></script>
     <script src="js/logic.js"></script>
     <script src="js/dom.js"></script>
